# WhatsThatFish

./: .dockerignore  .gitignore  Dockerfile  PHASE_3_ROADMAP.md  PHASE_4_PRODUCTION.md  README.md  pyproject.toml
.github/workflows/: ci_tests.yml  release.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
alembic/: env.py
alembic/versions/: 08ce26e0da8b_add_common_name_to_inat_taxa.py  0b46b94a11a0_adding_width_and_heigh_to_lila_.py  0df16c848589_added_zero_index_genus_and_family_to_.py  14501bf6590f_inat_context.py  528c8d11d272_updated_foreign_key_relationship_.py  5bba576fbbfa_changed_train_to_bool_in_.py  5c29ee0d900c_create_inat_tables.py  62a5c2a42bc2_lila_yolo_addition.py  62a985cf0847_location_common_name_depth_added_to_.py  6f36d67ce30c_corrected_data_type_on_dive_regions.py  6ff1a7878aff_corrected_subfamily_family.py  718dae771660_update_of_annotations_primary_key.py  7292239f728e_annotations_added_to_inat.py  7c714d9c92ac_changes_to_required_tables_and_schema_.py  972426b5c04c_added_proposed_bbox_to_inatclass.py  998a3198ce78_updated_capture_context.py  9e9b3518c577_minor_adjustment_to_index_name.py  a31bb45a794f_clip_context_table.py  a7b8c9d0e1f2_widen_dive_regions_iso_country.py  ac79b76d2e0b_adding_train_split_for_inat_.py  b03710e933e5_createa_lila_tables_and_success_tracker.py  b09382574363_observation_effective_label_label_status.py  b1a2cea8dd23_add_user_observation_tracking_tables.py  b4f7e2a9c3d1_add_inat_obj_detection_dataset.py  b7d2e1a94c30_add_is_hero_to_observation_photos.py  c1f3a7b8e2d4_add_user_preferred_name_unit_system.py  c2534e585edf_added_zero_indexed_classes.py  c345176b02e9_image_quality_tables.py  c4ffc47284e3_nullable_cols.py  c523988e75ac_added_final_inat_classification_dataset_.py  d17f111f414b_update_of_collected_images_pk.py  d4e5f6a7b8c9_locations_and_extended_dive_log.py  d7ae70c442b9_added_app_taxa.py  e17629ed8f5d_null_added_for_proposed_bbox.py  e9217b237685_added_confidence_to_inatclassdataset.py  f1a2b3c4d5e6_add_val_topup_to_inat_classification.py
docs/: DATASOURCE.md  MODELDESIGN.md  MODELMETRICS.md  NEXTSTEPS.md
docs/artifacts/kmeans_search/: kmeans_log.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  routes.ts
frontend/src/api/: auth.ts  backendStatus.tsx  client.js  client.ts  coldStart.test.tsx  config.ts  events.ts  field-log.ts  history.ts  http.test.ts  http.ts  imagePrefetch.ts  mappers.test.ts  mock-log.js  mock-log.ts  mock-predictions.js  mock-predictions.ts  mock.js  mock.ts  observations.ts  photoCache.ts  prediction.ts  species.ts  stats.ts  taxa.ts  types.ts  userStats.ts
frontend/src/auth/: AuthContext.tsx  google.d.ts
src/: config.py
src/database/: models.py
src/inference/: bbox_inference.py
src/model/: dataset.py
src/models/: c_custom_resnet.py  c_dataloader.py  c_dataset.py  od_dataloader.py  od_dataset.py
src/preprocessing/: Test.ipynb  clip_context.py  factory.py  five_channel_conversion.py  lcn_gradient_map.py  prepare_inat.py  score_runner.py
src/training/: od_training.py
src/whatsthatfish/: config.py  retry.py
tests/: conftest.py  test_app_taxa.py  test_auth_settings_api.py  test_auth_verify.py  test_bbox_inference.py  test_c_classification.py  test_c_dataloader.py  test_c_dataset.py  test_classifier.py  test_cls_metrics.py  test_detection.py  test_error_handlers.py  test_factory.py  test_five_channel.py  test_history_api.py  test_inat_bbox_proposal.py  test_inference_pipeline.py  test_integration.py  test_lcn_gradient.py  test_letterbox_resize.py  test_models_phase3.py  test_oc_training.py  test_od_dataloader.py  test_onnx_export.py  test_pipeline.py  test_prepare_inat.py  test_promotion.py  test_release_gates.py  test_repository.py  test_retry.py  test_scoring.py  test_services.py  test_serving_api.py  test_storage.py
tests/fixtures/: dataset.parquet  generate_fixtures.py
(+203 files in other folders)
