[project]
name = "whatsthatfish"
version = "0.1.0"
description = "Fish identification tool for divers using YOLO11 with underwater image preprocessing"
readme = "README.md"
requires-python = ">=3.12"
# Serving core: exactly what the CPU/ONNX Cloud Run image needs — no torch,
# ultralytics, ray, or ETL stack. Traced from the serving import surface
# (serving/ + inference Onnx* + transforms + database + gcs_client). Everything
# training/ETL lives in the `train` optional-dependency below.
dependencies = [
    # web / serving
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",   # FastAPI UploadFile/form parsing
    "pydantic>=2.0",              # serving schemas (also a fastapi dep)
    # inference
    "onnxruntime>=1.27.0",        # CPU wheel — NOT onnxruntime-gpu
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",  # cv2 in the 5-channel transforms
    # data / storage / auth
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",     # sync Postgres driver (serving is sync)
    "google-cloud-storage>=3.10.1",   # sync GCS reads (gcs_client)
    "google-auth>=2.49.1",        # Google ID-token verification
    "requests>=2.31.0",           # google.auth.transport.requests backend
    "tenacity>=9.1.4",            # db_retry / gcs_retry decorators
    # config
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "geopandas>=1.1.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["whatsthatfish*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "release: heavy model-release gate (ONNX parity, INT8 degradation, accuracy). Run in the v* release job, not every push. Select with `-m release`; skip with `-m 'not release'`.",
    "accuracy: release subset needing the full val dataset (DB + images) — runs in a data-bearing env (Cloud SQL / training VM), not vanilla CI. Weights-only CI runs `-m 'release and not accuracy'`.",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.15",
]

[project.optional-dependencies]
# Everything the training / ETL / export pipeline needs, on top of the serving
# core. Install with `pip install -e ".[train]"` on the training VM and in CI
# (the test suite imports the torch models, and the release job exports ONNX).
train = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.3.0",
    "transformers>=5.8.0",
    "clip",
    "ray[tune]>=2.55.1",
    "wandb>=0.26.1",
    "hdbscan>=0.8.43",
    "albumentations>=1.4.0",
    "pycocotools>=2.0.7",
    "ensemble-boxes>=1.0.8",
    "supervision>=0.19.0",
    "scikit-image>=0.22.0",
    "geopandas>=1.0.0",      # point-in-polygon: species → region backfill
    "shapely>=2.0.0",
    "polars>=1.0.0",
    "boto3>=1.42.78",
    "aiohttp>=3.9.0",
    "anthropic>=0.109.2",
    "gcsfs>=2024.2.0",
    "gcloud-aio-storage>=9.3.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.4",
    "onnx>=1.22.0",          # ONNX export + dynamic INT8 quantization
    "onnxscript>=0.7.1",
    "plotly>=6.7.0",
    "tqdm>=4.66.0",
]
# GPU-only training deps: the RAPIDS/CUDA clustering stack (~10 GB). Pulls a full
# cu13 toolchain that cannot run on CPU, so it's excluded from CI and serving and
# installed only on the training VM: `pip install -e ".[train,gpu]"`. The lone
# consumer (`prepare_inat.cu_fit`) imports cuml lazily, so `[train]` alone stays
# importable on CPU-only runners.
gpu = [
    "cuml-cu13==26.4",
]
# Test tooling — used by CI and the release gate. CI installs CPU torch first
# (see ci_tests.yml), then `pip install -e ".[train,test]"` — WITHOUT `gpu`.
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

